We added multiple views in one controller.

--- a/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet_cs.properties
+++ b/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet_cs.properties
@@ -2,3 +2,5 @@ javax.portlet.title=Basic Spring Portlet
 
 basicspring-question=Ahoj, jak se jmenuje\u0161?
 basicspring-submit=Odeslat
+basicspring-greeting=Hi
+basicspring-back=Back
