We added spring validation for our form.

--- a/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet_cs.properties
+++ b/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet_cs.properties
@@ -7,3 +7,8 @@ basicspring-back=Back
 basicspring-form-name=Name
 basicspring-form-date-of-birth=Date of Birth
 basicspring-bithday-in=Your birthday is in {0} days
+basicspring-err-null-value=Polo\u017eka je povinn\u00e1.
+typeMismatch.org.joda.time.DateTime=Nespr\u00e1vn\u00fd form\u00e1t data
+basicspring-err-to-early=Zadan\u00e9 datum je v dalek\u00e9 minulosti.
+basicspring-err-to-late=Zadan\u00e9 datum je v dalek\u00e9 budoucnosti.
+basicspring-bithday=and Happy Birthday\!\!\!
